# git-sshripped

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release-npm.yml  smoke-cli.yml
docs/: COMPATIBILITY.md  RELEASE_CHECKLIST.md  SOAK_PLAN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encryption_decrypt.rs  filter_pkt_protocol.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/git-sshripped/: README.md  package.json
npm/git-sshripped/src/: index.js
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64/: package.json
scripts/: bump-version.sh
