[workspace]
members = [
  "packages/git_ssh_crypt",
  "packages/cli",
  "packages/cli/models",
  "packages/repository",
  "packages/repository/models",
  "packages/recipient",
  "packages/recipient/models",
  "packages/worktree",
  "packages/worktree/models",
  "packages/encryption",
  "packages/encryption/models",
  "packages/filter",
  "packages/filter/models",
  "packages/ssh_identity",
  "packages/ssh_identity/models",
]
resolver = "2"

[workspace.package]
authors = ["Braden Steffaniak"]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/BSteffaniak/git-ssh-crypt"
version = "0.1.0-alpha.0"

[workspace.dependencies]
age = { version = "0.11.1", default-features = false, features = ["ssh"] }
git_ssh_crypt_cli_models = { version = "0.1.0-alpha.0", path = "packages/cli/models" }
git_ssh_crypt_encryption = { version = "0.1.0-alpha.0", path = "packages/encryption", default-features = false }
git_ssh_crypt_encryption_models = { version = "0.1.0-alpha.0", path = "packages/encryption/models" }
git_ssh_crypt_filter = { version = "0.1.0-alpha.0", path = "packages/filter", default-features = false }
git_ssh_crypt_filter_models = { version = "0.1.0-alpha.0", path = "packages/filter/models" }
git_ssh_crypt_recipient = { version = "0.1.0-alpha.0", path = "packages/recipient", default-features = false }
git_ssh_crypt_recipient_models = { version = "0.1.0-alpha.0", path = "packages/recipient/models" }
git_ssh_crypt_repository = { version = "0.1.0-alpha.0", path = "packages/repository", default-features = false }
git_ssh_crypt_repository_models = { version = "0.1.0-alpha.0", path = "packages/repository/models" }
git_ssh_crypt_ssh_identity = { version = "0.1.0-alpha.0", path = "packages/ssh_identity", default-features = false }
git_ssh_crypt_ssh_identity_models = { version = "0.1.0-alpha.0", path = "packages/ssh_identity/models" }
git_ssh_crypt_worktree = { version = "0.1.0-alpha.0", path = "packages/worktree", default-features = false }
git_ssh_crypt_worktree_models = { version = "0.1.0-alpha.0", path = "packages/worktree/models" }

anyhow = { version = "1.0.98", default-features = false }
base64 = { version = "0.22.1", default-features = false }
clap = { version = "4.5.40", default-features = false }
dirs = { version = "6.0.0", default-features = false }
globset = { version = "0.4.16", default-features = false }
hex = { version = "0.4.3", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
rand = { version = "0.9.0", default-features = false, features = [
  "std",
  "thread_rng",
] }
reqwest = { version = "0.12.9", default-features = false }
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tempfile = { version = "3.27.0", default-features = false }
toml = { version = "0.8.20", default-features = false }
zeroize = { version = "1.8.1", default-features = false }

# Crypto backends
aes-siv = { version = "0.7.0", default-features = false }

[profile.release]
codegen-units = 1
lto = false
opt-level = 3
strip = "symbols"
